--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:background="#000000"
-            android:text="Start Timer"
+            android:text="Set Timer"
             android:textStyle="bold"
             android:textColor="#ffffff" />
 
